--- a/index.html
+++ b/index.html
@@ -47,18 +47,14 @@
                         <input name="simbolo" type="checkbox" class="checkbox" id="simbolo">
                         <label for="simbolo">Símbolos</label>
                     </div>
-                    </div>
+                </div>
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
                     <div class="barra">
                         <div class="forca"></div> 
                     </div>
                     <div class="parametro-senha-textos">
-                        <span id="texto-forca-senha"></span>
-                        <p>Fraca</p>
-                        <p>Média</p>
-                        <p>Forte</p>
-                    </div>
+                        <span id="texto-forca-senha"></span> </div>
                     <p class="entropia"></p>
                 </div>
             </div>
