--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                         <div class="forca"></div> 
                     </div>
                     <div class="parametro-senha-textos">
-                        <span id="texto-forca-senha"></span> </div>
+                        <span id="texto-forca-senha"></span> 
+                        </div>
                     <p class="entropia"></p>
                 </div>
             </div>
